refactor: use list inatead of collection